auth + add_messages

--- a/mysite/forum/templates/forum/login.html
+++ b/mysite/forum/templates/forum/login.html
@@ -3,4 +3,12 @@
 
 {% block content %}
 
+{% include 'inc/_nav.html' %}
+
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="btn btn-primary">Войти</button>
+</form>
+
 {% endblock %}
