--- a/mysite/forum/templates/forum/index.html
+++ b/mysite/forum/templates/forum/index.html
@@ -6,7 +6,24 @@
 
 {% include 'inc/_nav.html' %}
 
-{% for message in messages %}
+{% if request.user.is_authenticated %}
+<form action="{% url 'home' %}" method="POST">
+  {% csrf_token %}
+  <div class="row px-4 py-3">
+    <div class="col-auto  d-flex align-content-center flex-wrap">
+      <button type="submit" class="btn btn-primary">Отправить сообщение</button>
+    </div>
+    <div class="form-group col d-flex align-content-center flex-wrap">
+      {{ form.text }}
+      <div class="invalid-feedback">
+        {{ form.text.errors }}
+      </div>
+    </div>
+  </div>
+</form>
+{% endif %}
+
+{% for message in forum_messages %}
 <div class="card">
   <div class="row g-0">
     <div class="col-md-1">
