--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -11,6 +11,21 @@
     <title>Форум молодых мам</title>
   </head>
   <body>
+    {% if messages %}
+      {% for message in messages %}
+        {% if message.tags == 'error' %}
+          <div class="alert alert-danger" role="alert">
+            {{ message }}
+          </div>
+        {% else %}
+          <div class="alert alert-{{ message.tags }}" role="alert">
+            {{ message }}
+          </div>
+        {% endif %}
+      {% endfor %}
+    {% endif %}
+    {% block add_message %}
+    {% endblock %}
     {% block content %}
     content
     {% endblock %}
