--- a/mysite/forum/templates/forum/index.html
+++ b/mysite/forum/templates/forum/index.html
@@ -9,8 +9,8 @@
 {% if request.user.is_authenticated %}
 <form action="{% url 'home' %}" method="POST">
   {% csrf_token %}
-  <div class="row px-4 py-3">
-    <div class="col-auto  d-flex align-content-center flex-wrap">
+  <div class="d-flex px-4 py-3">
+    <div class="col-auto px-3 d-flex align-content-center flex-wrap">
       <button type="submit" class="btn btn-primary">Отправить сообщение</button>
     </div>
     <div class="form-group col d-flex align-content-center flex-wrap">
@@ -23,17 +23,22 @@
 </form>
 {% endif %}
 
+<div class="messagesBody">
 {% for message in forum_messages %}
 <div class="card">
   <div class="row g-0">
     <div class="col-md-1">
-      <img src="https://stockinvest.us/storage/user_avatars/125139.jpg"  alt="..." style="height: 6rem">
+      {% if message.user.photo %}
+        <img src="{{ message.user.photo.url }}"  alt="..." class="img-thumbnail">
+      {% else %}
+        <img src="https://stockinvest.us/storage/user_avatars/125139.jpg"  alt="..." class="img-thumbnail">
+      {% endif %}
     </div>
-    <div class="col-md-8">
+    <div class="col-md-11">
       <div class="card-body">
         <h5 class="card-title">{{ message.user }}</h5>
         <p class="card-text">{{ message.text }}</p>
-        <p class="card-text"><small class="text-muted">{{ message.created_at }}</small></p>
+        <p class="card-text"><small class="text-muted">{{ message.created_at|date:"d b Y  H:i " }}</small></p>
       </div>
     </div>
   </div>
@@ -41,5 +46,6 @@
 {% empty %}
 Сообщений нет....(
 {% endfor %}
-
+</div>
 {% endblock %}
+
